--- a/style2.css
+++ b/style2.css
@@ -11,14 +11,12 @@
   --green-brown: #415b05;
   --lost:	#960000;
   --win:#008000;
-
   /* CSS HSL */
   --ecru: hsla(39, 47%, 70%, 1);
   --space-cadet: hsla(230, 34%, 24%, 1);
   --violet-blue: hsla(230, 49%, 42%, 1);
   --glaucous: hsla(229, 42%, 61%, 1);
   --baby-powder: hsla(90, 17%, 98%, 1);
-
   /* font-family: gesta, sans-serif; */
   font-family: "Azeret Mono", monospace;
   font-optical-sizing: auto;
@@ -29,7 +27,6 @@
   font-weight: 900;
   font-style: normal;
 }
-
 .comp,
 .player,
 #res,
@@ -39,44 +36,18 @@
   align-items: center;
   gap: 30px;
 }
-
-@media (max-width: 600px) {
-  #again{
-    justify-content: center;
-  }
-  .opt {
-    font-size: 10px;
-    color: var(--dark-goldenrod);
-    height: 50px;
-    width: 50px;
-    background-color: var(--dark-goldenrod);
-    padding: 0px;
-    border: 0px solid var(--dark-goldenrod);
-    border-radius: 50px;
-    font-weight: 900;
-  }
-
-  .opt img {
-    width: 50%; /* Reduce image size inside buttons */
-  }
-}
-
-
 body {
   background-color: var(--ecru);
   color: #faebd7;
 }
-
 img {
   width: 100%;
   border-radius: 50px;
 }
-
 h1 {
   text-align: center;
   color: var(--sambuca);
 }
-
 #rnd_txt{
     width: 100px;
     text-align: center;
@@ -87,33 +58,26 @@ h1 {
 #rnd img {
   transform: rotate(180deg);
 }
-
 #r img {
   transform: rotate(45deg);
 }
-
 #s img {
   transform: rotate(325deg);
 }
-
 button:hover {
   cursor: pointer;
 }
-
 #cont {
   margin: 25px;
 }
-
 .comp {
   height: 120px;
   margin: 15px;
 }
-
 .player {
   height: 120px;
   margin: 15px;
 }
-
 #rnd {
   /* padding: 5px; */
   margin: 5px;
@@ -127,7 +91,6 @@ button:hover {
   justify-content: center;
   align-items: center;
 }
-
 .opt {
   font-size: 20px;
   color: var(--dark-goldenrod);
@@ -139,11 +102,9 @@ button:hover {
   border-radius: 50px;
   font-weight: 900;
 }
-
 #p {
   margin-top: 30px;
 }
-
 #r:hover {
   background-color: var(--red-pink);
 }
@@ -153,7 +114,6 @@ button:hover {
 #s:hover {
   background-color: var(--green-brown);
 }
-
 #r:hover {
     background-color: var(--red-pink);
   border-color: var(--red-pink);
@@ -172,7 +132,6 @@ button:hover {
   color: var(--green-brown);
   font-weight: 500;
 }
-
 .select#r,
 .select#r:hover {
     background-color: var(--red-pink);
@@ -191,7 +150,6 @@ button:hover {
   border: 4px solid var(--green-brown);
   color: var(--green-brown);
 }
-
 #res {
   height: 30px;
   padding: 20px;
@@ -199,7 +157,6 @@ button:hover {
   font-size: 40px;
   text-shadow: 0px 2px 4px var(--sambuca);
 }
-
 .w{
     color: var(--win);
 }
@@ -209,14 +166,12 @@ button:hover {
 .d{
     color: white;
 }
-
 #again {
   font-size: 20px;
   height: 50px;
   margin: 15px;
   color: var(--sambuca);
 }
-
 #y,
 #n {
   width: 50px;
@@ -225,4 +180,67 @@ button:hover {
   color: var(--sambuca);
   border: 2px solid var(--sambuca);
   font-weight: 400;
+}
+
+/* Responsive styles - keeping original button styling */
+@media screen and (max-width: 768px) {
+  body {
+    padding: 0 15px;
+  }
+  
+  #cont {
+    margin: 15px 0;
+  }
+  
+  .comp, .player, #res, #again {
+    gap: 20px;
+  }
+  
+  #res {
+    margin: 25px 0;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  h1 {
+    font-size: 1.5rem;
+  }
+  
+  .comp, .player, #res, #again {
+    gap: 10px;
+    flex-wrap: wrap;
+  }
+  
+  .comp, .player {
+    height: auto;
+    margin: 10px 0;
+  }
+  
+  #res {
+    font-size: 30px;
+    margin: 20px 0;
+    height: auto;
+  }
+  
+  #again {
+    flex-direction: column;
+    height: auto;
+    margin: 10px 0;
+  }
+  
+  #again p {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .player {
+    justify-content: space-around;
+  }
+  
+  #res {
+    font-size: 24px;
+    padding: 15px 0;
+  }
 }
